0023346: MSVC++ Error C2664: 'AIS_InteractiveObject::PolygonOffsets': conversion from 'Standard_Real' in 'Standard_ShortReal &'

Changed Standard_Real to Standard_ShortReal.

Modify test case offset shape_type_i D6